[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "fleet-event-bus"
version = "0.1.0"
description = "Publish/Subscribe event bus for the Pelagic fleet — connects all fleet agents together"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = []

[project.scripts]
fleet-bus = "cli:main"

[tool.setuptools.packages.find]
include = ["*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
